// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures > button.arv > css 1`] = `
".Button_root_0p4oom {
  display: inline-flex;
  align-items: center;
  gap: 4px;
  padding: 8px 16px;
  border-radius: 8px;
  color: white;
  outline: none;
}

.Button_root_0p4oom:focus-visible {
  outline: 2px solid #635bff;
  outline-offset: 2px;
}

.Button_root_0p4oom:hover {
  filter: brightness(1.05);
}

.Button_icon_0p4oom {
  flex-shrink: 0;
}

.Button_label_0p4oom {
  font-weight: 500;
}

.Button_size_sm_root_0p4oom {
  font-size: 12px;
}

.Button_size_md_root_0p4oom {
  font-size: 14px;
}

.Button_size_lg_root_0p4oom {
  font-size: 16px;
}

.Button_size_lg_icon_0p4oom {
  width: 20px;
}

.Button_tone_primary_root_0p4oom {
  background: #635bff;
}

.Button_tone_danger_root_0p4oom {
  background: #e5484d;
}

.Button_size_sm_tone_danger_root_0p4oom {
  font-weight: 600;
}
"
`;

exports[`golden fixtures > button.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type ButtonProps = {
  size?: "sm" | "md" | "lg";
  tone?: "primary" | "danger";
};

export type ButtonSlots = {
  root: string;
  icon: string;
  label: string;
};

export declare function Button(props?: ButtonProps): ButtonSlots;

export declare const tokens: {
  readonly color: {
    readonly primary: string;
    readonly danger: string;
    readonly text: string;
  };
  readonly space: {
    readonly "1": string;
    readonly "2": string;
    readonly "4": string;
  };
  readonly radius: {
    readonly md: string;
  };
};

export type ColorToken = keyof (typeof tokens)["color"];

export type SpaceToken = keyof (typeof tokens)["space"];

export type RadiusToken = keyof (typeof tokens)["radius"];
"
`;

exports[`golden fixtures > button.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Button_base = {
  "root": "Button_root_0p4oom",
  "icon": "Button_icon_0p4oom",
  "label": "Button_label_0p4oom"
};

const Button_variants = {
  "size": {
    "sm": {
      "root": "Button_size_sm_root_0p4oom"
    },
    "md": {
      "root": "Button_size_md_root_0p4oom"
    },
    "lg": {
      "root": "Button_size_lg_root_0p4oom",
      "icon": "Button_size_lg_icon_0p4oom"
    }
  },
  "tone": {
    "primary": {
      "root": "Button_tone_primary_root_0p4oom"
    },
    "danger": {
      "root": "Button_tone_danger_root_0p4oom"
    }
  }
};

const Button_compounds = [
  [
    {
      "size": "sm",
      "tone": "danger"
    },
    {
      "root": "Button_size_sm_tone_danger_root_0p4oom"
    }
  ]
];

const Button_defaults = {
  "size": "md",
  "tone": "primary"
};

export function Button(props) {
  return _h(Button_base, Button_variants, Button_compounds, Button_defaults, ["root","icon","label"], props);
}

export const tokens = {
  "color": {
    "primary": "#635bff",
    "danger": "#e5484d",
    "text": "#111111"
  },
  "space": {
    "1": "4px",
    "2": "8px",
    "4": "16px"
  },
  "radius": {
    "md": "8px"
  }
};
"
`;

exports[`golden fixtures > container-card.arv > css 1`] = `
".Card_root_0cgz70 {
  container-type: inline-size;
  display: block;
}

@container (inline-size < 480px) {
.Card_root_0cgz70 {
  display: flex;
}
}
"
`;

exports[`golden fixtures > container-card.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type CardSlots = {
  root: string;
};

export declare function Card(): CardSlots;

export declare const tokens: {
  readonly "container-size": {
    readonly wide: string;
  };
};

export type ContainerSizeToken = keyof (typeof tokens)["container-size"];
"
`;

exports[`golden fixtures > container-card.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Card_base = {
  "root": "Card_root_0cgz70"
};

const Card_variants = {};

const Card_compounds = [];

const Card_defaults = {};

export function Card(props) {
  return _h(Card_base, Card_variants, Card_compounds, Card_defaults, ["root"], props);
}

export const tokens = {
  "container-size": {
    "wide": "480px"
  }
};
"
`;

exports[`golden fixtures > keyframes.arv > css 1`] = `
"@keyframes pulse {
from {
  opacity: 1;
}

to {
  opacity: 0.5;
}
}

.Box_root_0tzzc8 {
  animation: pulse 120ms;
}
"
`;

exports[`golden fixtures > keyframes.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type BoxSlots = {
  root: string;
};

export declare function Box(): BoxSlots;

export declare const tokens: {
  readonly duration: {
    readonly fast: string;
  };
};

export type DurationToken = keyof (typeof tokens)["duration"];
"
`;

exports[`golden fixtures > keyframes.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Box_base = {
  "root": "Box_root_0tzzc8"
};

const Box_variants = {};

const Box_compounds = [];

const Box_defaults = {};

export function Box(props) {
  return _h(Box_base, Box_variants, Box_compounds, Box_defaults, ["root"], props);
}

export const tokens = {
  "duration": {
    "fast": "120ms"
  }
};
"
`;

exports[`golden fixtures > local-tokens.arv > css 1`] = `
".Chip_root_0tkuoj {
  padding: 6px 8px;
  border-radius: 999px;
  background: #635bff;
}

.Chip_size_lg_root_0tkuoj {
  padding: calc(6px * 2);
}
"
`;

exports[`golden fixtures > local-tokens.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type ChipProps = {
  size: "lg";
};

export type ChipSlots = {
  root: string;
};

export declare function Chip(props: ChipProps): ChipSlots;

export declare const tokens: {
  readonly space: {
    readonly "2": string;
    readonly "4": string;
  };
  readonly color: {
    readonly primary: string;
  };
};

export type SpaceToken = keyof (typeof tokens)["space"];

export type ColorToken = keyof (typeof tokens)["color"];
"
`;

exports[`golden fixtures > local-tokens.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Chip_base = {
  "root": "Chip_root_0tkuoj"
};

const Chip_variants = {
  "size": {
    "lg": {
      "root": "Chip_size_lg_root_0tkuoj"
    }
  }
};

const Chip_compounds = [];

const Chip_defaults = {};

export function Chip(props) {
  return _h(Chip_base, Chip_variants, Chip_compounds, Chip_defaults, ["root"], props);
}

export const tokens = {
  "space": {
    "2": "8px",
    "4": "16px"
  },
  "color": {
    "primary": "#635bff"
  }
};
"
`;

exports[`golden fixtures > multi-theme.arv > css 1`] = `
":root {
  color-scheme: light dark;
  --arvia-color-text: light-dark(#111111, #eeeeee);
  --arvia-color-background: light-dark(#ffffff, #000000);
}

[data-arvia-theme="light"] {
  color-scheme: light;
}

[data-arvia-theme="dark"] {
  color-scheme: dark;
}

body {
  color: var(--arvia-color-text);
  background: var(--arvia-color-background);
}
"
`;

exports[`golden fixtures > multi-theme.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export declare const tokens: {
  readonly color: {
    readonly text: "var(--arvia-color-text)";
    readonly background: "var(--arvia-color-background)";
  };
};

export type ColorToken = keyof (typeof tokens)["color"];
"
`;

exports[`golden fixtures > multi-theme.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export const tokens = {
  "color": {
    "text": "var(--arvia-color-text)",
    "background": "var(--arvia-color-background)"
  }
};
"
`;

exports[`golden fixtures > range-bands.arv > css 1`] = `
".Panel_root_17oskk {
  display: block;
  padding: 4px;
}

@media (min-width: 768px) {
.Panel_root_17oskk {
  padding: 8px;
}
}

@media (width < 1024px) {
.Panel_root_17oskk {
  padding: 4px;
}
}

@media (480px <= width < 1024px) {
.Panel_root_17oskk {
  padding: 8px;
}
}

@media (min-width: 900px) {
.Panel_root_17oskk {
  padding: 12px;
}
}

@container (inline-size < 560px) {
.Panel_root_17oskk {
  flex-direction: column;
}
}

@container (320px <= inline-size < 560px) {
.Panel_root_17oskk {
  flex-direction: row;
}
}
"
`;

exports[`golden fixtures > range-bands.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type PanelSlots = {
  root: string;
};

export declare function Panel(): PanelSlots;

export declare const tokens: {
  readonly breakpoint: {
    readonly sm: string;
    readonly md: string;
    readonly lg: string;
  };
  readonly "container-size": {
    readonly narrow: string;
    readonly wide: string;
  };
};

export type BreakpointToken = keyof (typeof tokens)["breakpoint"];

export type ContainerSizeToken = keyof (typeof tokens)["container-size"];
"
`;

exports[`golden fixtures > range-bands.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Panel_base = {
  "root": "Panel_root_17oskk"
};

const Panel_variants = {};

const Panel_compounds = [];

const Panel_defaults = {};

export function Panel(props) {
  return _h(Panel_base, Panel_variants, Panel_compounds, Panel_defaults, ["root"], props);
}

export const tokens = {
  "breakpoint": {
    "sm": "480px",
    "md": "768px",
    "lg": "1024px"
  },
  "container-size": {
    "narrow": "320px",
    "wide": "560px"
  }
};
"
`;

exports[`golden fixtures > recipes-nested.arv > css 1`] = `
".Card_root_07xhee {
  border-radius: 8px;
  border: 1px solid #e5e5e5;
  background: white;
  padding: 16px;
  background: #fafafa;
}
"
`;

exports[`golden fixtures > recipes-nested.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type CardSlots = {
  root: string;
};

export declare function Card(): CardSlots;
"
`;

exports[`golden fixtures > recipes-nested.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Card_base = {
  "root": "Card_root_07xhee"
};

const Card_variants = {};

const Card_compounds = [];

const Card_defaults = {};

export function Card(props) {
  return _h(Card_base, Card_variants, Card_compounds, Card_defaults, ["root"], props);
}
"
`;

exports[`golden fixtures > required-variant.arv > css 1`] = `
".Tag_root_092p2z {
  display: inline-flex;
  align-items: center;
}

.Tag_tone_info_root_092p2z {
  color: blue;
}

.Tag_tone_danger_root_092p2z {
  color: red;
}

.Tag_size_sm_root_092p2z {
  font-size: 12px;
}

.Tag_size_md_root_092p2z {
  font-size: 14px;
}
"
`;

exports[`golden fixtures > required-variant.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type TagProps = {
  tone: "info" | "danger";
  size?: "sm" | "md";
};

export type TagSlots = {
  root: string;
};

export declare function Tag(props: TagProps): TagSlots;
"
`;

exports[`golden fixtures > required-variant.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Tag_base = {
  "root": "Tag_root_092p2z"
};

const Tag_variants = {
  "tone": {
    "info": {
      "root": "Tag_tone_info_root_092p2z"
    },
    "danger": {
      "root": "Tag_tone_danger_root_092p2z"
    }
  },
  "size": {
    "sm": {
      "root": "Tag_size_sm_root_092p2z"
    },
    "md": {
      "root": "Tag_size_md_root_092p2z"
    }
  }
};

const Tag_compounds = [];

const Tag_defaults = {
  "size": "sm"
};

export function Tag(props) {
  return _h(Tag_base, Tag_variants, Tag_compounds, Tag_defaults, ["root"], props);
}
"
`;

exports[`golden fixtures > responsive-button.arv > css 1`] = `
".Button_root_0tbkbv {
  display: inline-flex;
  padding: 4px;
}

@media (min-width: 768px) {
.Button_root_0tbkbv {
  padding: 16px;
}
}
"
`;

exports[`golden fixtures > responsive-button.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type ButtonSlots = {
  root: string;
};

export declare function Button(): ButtonSlots;

export declare const tokens: {
  readonly breakpoint: {
    readonly md: string;
  };
};

export type BreakpointToken = keyof (typeof tokens)["breakpoint"];
"
`;

exports[`golden fixtures > responsive-button.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Button_base = {
  "root": "Button_root_0tbkbv"
};

const Button_variants = {};

const Button_compounds = [];

const Button_defaults = {};

export function Button(props) {
  return _h(Button_base, Button_variants, Button_compounds, Button_defaults, ["root"], props);
}

export const tokens = {
  "breakpoint": {
    "md": "768px"
  }
};
"
`;

exports[`golden fixtures > single-slot.arv > css 1`] = `
".Badge_root_1mojuh {
  padding: 2px 8px;
  border-radius: 999px;
}

.Badge_tone_neutral_root_1mojuh {
  background: #eee;
}

.Badge_tone_success_root_1mojuh {
  background: #d3f9d8;
}
"
`;

exports[`golden fixtures > single-slot.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type BadgeProps = {
  tone?: "neutral" | "success";
};

export type BadgeSlots = {
  root: string;
};

export declare function Badge(props?: BadgeProps): BadgeSlots;
"
`;

exports[`golden fixtures > single-slot.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _h = (base, variants, compounds, defaults, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      const val = _resolveStatic(raw, defaults[v]);
      const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
      if (add) c += (c ? " " : "") + add;
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Badge_base = {
  "root": "Badge_root_1mojuh"
};

const Badge_variants = {
  "tone": {
    "neutral": {
      "root": "Badge_tone_neutral_root_1mojuh"
    },
    "success": {
      "root": "Badge_tone_success_root_1mojuh"
    }
  }
};

const Badge_compounds = [];

const Badge_defaults = {
  "tone": "neutral"
};

export function Badge(props) {
  return _h(Badge_base, Badge_variants, Badge_compounds, Badge_defaults, ["root"], props);
}
"
`;

exports[`golden fixtures > styles.arv > css 1`] = `
".truncate_0tgf3h {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.panel_16w2cv {
  border: 1px solid #e5e5e5;
  background: white;
  padding: 8px;
}

.panel_16w2cv:hover {
  border-color: #635bff;
}
"
`;

exports[`golden fixtures > styles.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export declare const truncate: string;

export declare const panel: string;

export declare const tokens: {
  readonly color: {
    readonly accent: string;
  };
  readonly space: {
    readonly "2": string;
  };
};

export type ColorToken = keyof (typeof tokens)["color"];

export type SpaceToken = keyof (typeof tokens)["space"];
"
`;

exports[`golden fixtures > styles.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export const truncate = "truncate_0tgf3h";

export const panel = "panel_16w2cv";

export const tokens = {
  "color": {
    "accent": "#635bff"
  },
  "space": {
    "2": "8px"
  }
};
"
`;

exports[`golden fixtures > theme-only.arv > css 1`] = `
"html, body {
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

body {
  color: #635bff;
}
"
`;

exports[`golden fixtures > theme-only.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export declare const tokens: {
  readonly color: {
    readonly primary: string;
  };
};

export type ColorToken = keyof (typeof tokens)["color"];
"
`;

exports[`golden fixtures > theme-only.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export const tokens = {
  "color": {
    "primary": "#635bff"
  }
};
"
`;
